third_party/move/move-compiler-v2/tests/lambda-lifting/basic.lambda.exp

Diagnostics:
error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda-lifting/basic.move:10:16
   │
10 │         map(x, |y| y + c)
   │                ^^^^^^^^^

error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda-lifting/basic.move:15:16
   │
15 │         map(x, |x| x + c)
   │                ^^^^^^^^^

error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda-lifting/basic.move:20:16
   │
20 │           map(x, |x| {
   │ ╭────────────────^
21 │ │             let x = c + 1;
22 │ │             x
23 │ │         } + x)
   │ ╰─────────────^
